# WCA-Backend

./: .env.demo  .gitignore  README.md  pyproject.toml  secret.key
accounts/: admin.py  models.py
activities/: admin.py  functions.py  models.py
activities/static/css/: style.css
activities/templates/: certificate.html
api/v1/accounts/: serializers.py  urls.py  views.py
api/v1/activities/: functions.py  serializers.py  urls.py  views.py
api/v1/courses/: serializers.py  urls.py  views.py
api/v1/payments/: serializers.py  urls.py  views.py
api/v1/payments/razorpay/: __init__.py  main.py
courses/: admin.py  models.py
courses/templates/admin/courses/coursesubcontent/: edit_inline_tabular.html
django_core/: settings.py  urls.py
general/: decoraters.py  encryptions.py  functions.py  middlewears.py  models.py
payments/: admin.py  models.py
static/css/: admin_custom.css
